tests/paczka1/fuzzy1/49171227.err
Error in line 1: o7NNCGN S410 35,6
Error in line 11: S410 S781 17,8
Error in line 25: S410 S781 46,5
Error in line 27: axmMdF S781 15,2
Error in line 20: o7NNCGN A505 44,3
